--- a/backend/notification-service/DockerFile
+++ b/backend/notification-service/DockerFile
@@ -1,28 +1,23 @@
-# Stage 1: Build
-FROM node:18-alpine AS builder
+# Step 1: Base image
+FROM node:20-alpine
 
+# Step 2: Set working directory
 WORKDIR /app
 
-# Install dependencies
+# Step 3: Copy package.json and package-lock.json (or yarn.lock)
 COPY package*.json ./
+
+# Step 4: Install dependencies
 RUN npm install
 
-# Copy source code
+# Step 5: Copy the rest of your application
 COPY . .
 
-# Build the project
+# Step 6: Build the NestJS app
 RUN npm run build
 
-# Stage 2: Runtime
-FROM node:18-alpine
+# Step 7: Expose the port
+EXPOSE 3000
 
-WORKDIR /app
-
-# Copy only the built files and node_modules
-COPY --from=builder /app/dist ./dist
-COPY --from=builder /app/node_modules ./node_modules
-COPY package*.json ./
-COPY .env ./
-
-# Start the app
-CMD ["node", "dist/main"]
+# Step 8: Start the production server
+CMD ["npm", "run", "start:prod"]
